@@ -32,8 +32,10 @@ hash_ZX(pol) =
 check_disc(D, hash, seed = 0) =
 {
    if (seed != 0, setrand(seed));
-   if (hash_ZX(polclass(D[1], D[2])) != hash,
-       error("Wrong class polynomial for D = ", D[1], ", inv = ", D[2]));
+   my (h = hash_ZX(polclass(D[1], D[2])));
+   if (h != hash,
+       error("Wrong class polynomial for D = ", D[1], ", inv = ", D[2]),
+             "hash = ", h);
 }
 
 {
@@ -107,6 +109,7 @@ D = [[[-3, 0], 199415601],
      [[-527, 6], 16357965504658585322],
      [[-47, 6], 243447500721580],
      [[-42955, 35], 14052068170087575320],
+     [[-5032, 27], 3867221821476957240],
      [[-49348, 27], 10861324145157519298],
      [[-31460, 15], 17615562111387810148],
      [[-207480, 26], 7872480165757364895],
