@@ -103,6 +103,7 @@ BA   74- [pthread] do not use pthread when nbthreads=1
 BA   78- nfisisom, nfisincl and factor were still using factornf
 PB   79- nfinit(t_POL of deg 1, 3) => incorrect change of variable
      80- subst(t_SER, x, x+O(x^N)) was slow [ e.g. ellj(x+O(x^10000)) ]
+BA   81- setrand(2);polclass(-5032,27) -> wrong result
 
   Added
       1- [libari] ZM_isidentity
